# fs_scanner

./: README.md  mkdocs.yml  pyproject.toml  requirements_dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: installation.yml
docs/: contributing.md  index.md  installation.md
fs_scanner/: __init__.py  fs_compare.py  fs_scanner.py
