[project]
name = "fs_scanner"
version = "0.0.1"
dynamic = [
    "dependencies",
]
description = "A simple filesystem scanner generating a report with size and checksum details."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "fs_scanner",
]
license = {text = "MIT License"}
authors = [
  {name = "Jens Nie", email = "jneines@web.de"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
fs_scanner = "fs_scanner.fs_scanner:main"

[project.optional-dependencies]
all = [
    "fs_scanner[extra]",
]

extra = [
]


[tool]
[tool.setuptools.packages.find]
include = ["fs_scanner*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "fs_scanner/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/jneines/fs_scanner"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
